@@ -1,5 +1,10 @@
 2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* src/gdict-source-dialog.c (gdict_source_dialog_constructor): switch
+	the cancel and add buttons.
+
+2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* libgdict/gdict-client-context.c
 	(gdict_client_context_lookup_server): make the hostname lookup cache
 	expire after five minutes; this should tentatively solve bug #169915.
